// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#constructor() 1`] = `
Indexed {
  "index": 0,
  "source": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`#drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`#drop() 2`] = `
Indexed {
  "index": 0,
  "source": Array [],
}
`;

exports[`#next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`#next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`#next() 3`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`#next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
